--- a/src/app/admin/users/dialog/usersdialog/usersdialog.component.html
+++ b/src/app/admin/users/dialog/usersdialog/usersdialog.component.html
@@ -61,8 +61,8 @@
           <div class="col-md-6 mb-0">
             <!-- <app-datepicker class="" [Dateitem]="formdata.controls['dob'].value" (dateChange)="onDate($event)"></app-datepicker> -->
         <mat-form-field  appearance="outline" class="example-full-width">
-          <mat-label>Date of Birth</mat-label>
-          <input matInput placeholder="DD/MM/YYYY" readonly formControlName="dob" [matDatepicker]="picker">
+          <mat-label>Date of Birth {{formdata.controls['dob'].value}}</mat-label>
+          <input matInput [(ngModel)]="datemodel" placeholder="DD/MM/YYYY" readonly formControlName="dob" [matDatepicker]="picker">
        
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
@@ -143,28 +143,9 @@
           </div>
       </div>
     
-    <div class="row">
-      <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 mb-5">
-        <label>Upload Profile Picture <small>(Max file size 50kb)</small></label>
-        <app-file-upload (ngModelChange)="change($event)" [acceptonly]="acceptonly" formControlName="uploadFile"></app-file-upload>
+    
       </div>
-      
-    </div>
-      </div>
-      <div class="row" *ngIf="this.data.tabledatadeatils.dailogPage=='userDailog'||this.data.tabledatadeatils.statusoption=='statusDailog'">
-        <div class="col-md-6 mb-2">
-          <mat-form-field class="example-full-width" appearance="outline">
-            <mat-label>{{this.data.tabledatadeatils.dailogPage=='userDailog'?'Update Password':'Create Password'}}</mat-label>
-            <input matInput formControlName="password">
-             <mat-icon matSuffix>vpn_key</mat-icon>
-             <mat-error
-             *ngIf="formdata.controls['password'].hasError('required') && formdata.controls['password'].touched">
-             Password is required.
-           </mat-error>
-          </mat-form-field>
-          
-        </div>
-    </div>
+   
 
          
         <div class="row"  *ngIf="data.tabledatadeatils.statusoption!='statusDailog'">
