--- a/src/app/admin/users/dialog/deletedialog/deletedialog.component.html
+++ b/src/app/admin/users/dialog/deletedialog/deletedialog.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-    <h3 mat-dialog-title>Are you sure you want to {{this.data.popupForm=='Delete'?'Inactive':'delete'}}?</h3>
+    <h3 mat-dialog-title>Are you sure you want to {{this.data.tabledatadeatils.statusoption==''?'delete':'Inactive'}}?</h3>
     <div mat-dialog-content>
      
     </div>
