--- a/src/app/admin/users/dialog/usersdialog/usersdialog.component.html
+++ b/src/app/admin/users/dialog/usersdialog/usersdialog.component.html
@@ -64,7 +64,7 @@
         <mat-form-field  appearance="outline" class="example-full-width">
 
           <mat-label>Date of Birth</mat-label>
-          <input matInput  placeholder="DD/MM/YYYY" readonly formControlName="dob" [matDatepicker]="picker">
+          <input matInput  placeholder="DD-MM-YYYY" readonly formControlName="dob" [matDatepicker]="picker">
        
           <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
