--- a/src/app/admin/users/user-profile/user-profile.component.html
+++ b/src/app/admin/users/user-profile/user-profile.component.html
@@ -12,10 +12,10 @@
             <div class="contact-grid">
               <div class="profile-header bg-dark">
                 <div class="user-name">{{this.UserDetais[0]?.first_name+" " +this.UserDetais[0]?.last_name }}</div>
-                <div class="name-center">Senior Doctor</div>
+                <div class="name-center">{{userrole}}</div>
               </div>
               <div class="profileimg">
-                <img src="assets/images/user/usrbig3.jpg" class="user-img" alt="">
+                <img src="{{userImg}}" class="user-img" width="110" alt="">
                 <button (click)="onuploadProfileimg()">
                   <i class="material-icons">image</i>
                 </button>
