--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,30 @@
 }
 }
 }
+.loader{    position: fixed;
+    top: 0;
+    background: #f9fafb;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 111; padding-top: 22%; padding-left: 20%;}
+    .loaderspinner {
+        border:5px solid #f3f3f3;
+        border-radius: 50%;
+        border-top:5px solid #3498db;
+        width:40px;
+        height:40px;
+        -webkit-animation: spin 2s linear infinite; /* Safari */
+        animation: spin 2s linear infinite; margin:0 auto; 
+      }
+      
+      /* Safari */
+      @-webkit-keyframes spin {
+        0% { -webkit-transform: rotate(0deg); }
+        100% { -webkit-transform: rotate(360deg); }
+      }
+      
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
