--- a/src/app/admin/awb-stock/dialog/add-awb-type/add-awb-type.component.html
+++ b/src/app/admin/awb-stock/dialog/add-awb-type/add-awb-type.component.html
@@ -25,14 +25,14 @@
                         </mat-error>
                     </mat-form-field>
                 </div>
-
+                
             </div>
 
             <div class="row">
                 <div class="col-md-12 col-sm-12 mb-2">
                     <mat-form-field class="example-full-width" appearance="outline">
                         <mat-label>Prefix</mat-label>
-                        <input matInput formControlName="awb_prefix" type="number">
+                        <input matInput formControlName="awb_prefix" min="1" type="number">
                         <mat-error *ngIf="formdata.get('awb_prefix').hasError('required')">
                             Prefix is required
                         </mat-error>
