--- a/src/app/admin/users/user-type/user-type.component.html
+++ b/src/app/admin/users/user-type/user-type.component.html
@@ -39,7 +39,7 @@
                  
                   </div>
                 </div>
-                <app-datatable *ngIf="inload" (dataChange)="addItem($event)"  [tabledata]="dataForTable"  [tableheader]="countryheader"></app-datatable>
+                <app-datatable *ngIf="inload" (dataChange)="addItem($event)"  [tabledata]="dataForTable" [tablename]="'usertable'"  [tableheader]="countryheader"></app-datatable>
             </div>
             </div>
           </div>
