--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -8,7 +8,8 @@
           <li class="sidebar-user-panel">
             <div class="user-panel">
               <div class=" image">
-                <img src={{userImg}} class="img-circle user-img-circle" alt="User Image" />
+                <app-viewimg [imgurl]=""></app-viewimg>
+                <img src="{{userImg}}" class="img-circle user-img-circle" alt="User Image" />
               </div>
             </div>
             <div class="profile-usertitle">
