--- a/src/app/admin/booking/dialog/add-booking/add-booking.component.html
+++ b/src/app/admin/booking/dialog/add-booking/add-booking.component.html
@@ -116,7 +116,7 @@
                             <div class="col-md-12 col-sm-12 mb-2">
                                 <mat-form-field class="example-full-width" appearance="outline">
                                     <mat-label>Destination Pincode</mat-label>
-                                    <input type="text" [min]="1" [listValidator]="destinationPincodes" [validatorKey]="'Id'" placeholder="Pick one" aria-label="Number"
+                                    <input type="number" [min]="1" [listValidator]="destinationPincodes" [validatorKey]="'Id'" placeholder="Pick one" aria-label="Number"
                                         formControlName="destination_pincode_id" matInput [matAutocomplete]="destpostcode">
                                     <mat-autocomplete autoActiveFirstOption #destpostcode="matAutocomplete"
                                         [displayWith]="displayFunc.bind(this,destinationPincodes,'Id','PostCode')">
@@ -365,10 +365,10 @@
                                     <mat-label>Consignor Mobile No.</mat-label>
                                     <input type="number" [min]="1000000000" placeholder="Pick one" [max]="9999999999" aria-label="Number"
                                         formControlName="consignor_mobile" matInput [matAutocomplete]="consigMob">
-                                    <mat-autocomplete autoActiveFirstOption #consigMob="matAutocomplete">
-                                        <mat-option *ngFor="let option of filteredConsignorMobileNos | async"
-                                            [value]="option.MobileNo">
-                                            {{option.MobileNo}}
+                                    <mat-autocomplete  autoActiveFirstOption #consigMob="matAutocomplete">
+                                        <mat-option (click)="onConsignorMobileSelect(option)" *ngFor="let option of filteredConsignorMobileNos | async"
+                                            [value]="option.consignor_mobile">
+                                            {{option.consignor_mobile}}
                                         </mat-option>
                                     </mat-autocomplete>
                                     <mat-error *ngIf="consignorForm.get('consignor_mobile').hasError('required')">
@@ -462,14 +462,13 @@
                                 <mat-form-field class="example-full-width" appearance="outline">
                                     <mat-label>Consignee Mobile No.</mat-label>
                                     <input type="number" [min]="1000000000" placeholder="Pick one" [max]="9999999999" placeholder="Pick one" aria-label="Number"
-                                        formControlName="consignee_mobile" matInput >
-                                    <!-- <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete"
-                                        [displayWith]="displayFunc.bind(this,consigneeMobileNos,'MobileNo','MobileNo')">
-                                        <mat-option *ngFor="let option of filteredConsigneeMobileNos | async"
-                                            [value]="option.MobileNo">
-                                            {{option.MobileNo}}
-                                        </mat-option>
-                                    </mat-autocomplete> -->
+                                        formControlName="consignee_mobile" matInput [matAutocomplete]="consigeMob" >
+                                        <mat-autocomplete  autoActiveFirstOption #consigeMob="matAutocomplete">
+                                            <mat-option (click)="onConsigneeMobileSelect(option)" *ngFor="let option of filteredConsigneeMobileNos | async"
+                                                [value]="option.consignee_mobile">
+                                                {{option.consignee_mobile}}
+                                            </mat-option>
+                                        </mat-autocomplete>
                                     <mat-error *ngIf="consignorForm.get('consignee_mobile').hasError('required')">
                                         This is required
                                     </mat-error>
@@ -576,7 +575,7 @@
                                         [displayWith]="displayFunc.bind(this,gstRates,'Id','Name')">
                                         <mat-option *ngFor="let option of filteredGSTRates | async"
                                             [value]="option.Id">
-                                            {{option.Name}}
+                                            {{option.Name}} 
                                         </mat-option>
                                     </mat-autocomplete>
                                     <mat-error *ngIf="consignorForm.get('gst_rate_id').hasError('required')">
