--- a/src/app/admin/users/permission/permission.component.html
+++ b/src/app/admin/users/permission/permission.component.html
@@ -51,13 +51,39 @@
                       </mat-panel-title>
                       <mat-panel-description class="justify-content-end">
                        
-                        <mat-slide-toggle  color="primary"></mat-slide-toggle> 
+                        <!-- <mat-slide-toggle  color="primary"></mat-slide-toggle>  -->
                       </mat-panel-description>
                     </mat-expansion-panel-header>
                  
                         
-                        <mat-list role="list" class="m-0 p-0" *ngFor="let child of menulist.submenu">
-                          <mat-list-item role="listitem"> <mat-checkbox color="primary" class="example-margin">{{child.title}} </mat-checkbox></mat-list-item>
+                        <mat-list role="list"  *ngFor="let child of menulist.submenu">
+                          <mat-list-item role="listitem">
+                            <div class="container-fluid">
+                              <div class="row">
+                                <div class="col-md-4 pt-4"> <mat-checkbox color="primary" class="example-margin">{{child.title}} </mat-checkbox></div>
+                                <div class="col-md-8 pt-2">
+                                  <div class="row">
+                                    <div class="col pt-2 text-center"><small>Edit</small><br>
+                                      <mat-slide-toggle  color="primary"></mat-slide-toggle> 
+                                    </div>
+                                    <div class="col pt-2 text-center"><small>Update</small><br>
+                                      <mat-slide-toggle  color="primary"></mat-slide-toggle> 
+                                    </div>
+                                    <div class="col pt-2 text-center"><small>Delete</small><br>
+                                      <mat-slide-toggle  color="primary"></mat-slide-toggle> 
+                                    </div>
+                                  </div>
+
+                                </div>
+                               
+                              </div>
+
+                            </div>
+                            
+                           
+                          
+                          
+                          </mat-list-item>
                          
                         </mat-list>
                        
