--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,12 @@
   .mdc-switch__handle-track{ left:-4px;}
  }
  .ml-auto{ margin-left: auto;}
+ .seardhbox{ margin-left: 20px;
+  input{ height: 40px; padding-left: 5px !important;min-width: 460px !important;
+  }
+  button{height: 40px;
+    border-radius: 0 4px 4px 0;}
+ }
 .mr-3{ margin-right: 1.25rem !important;}
       
       /* Safari */
