--- a/src/app/admin/awbsearch/awbsearch.component.html
+++ b/src/app/admin/awbsearch/awbsearch.component.html
@@ -15,7 +15,7 @@
                     <div class="col-8">
                       <ul class="header-buttons-left ms-0">
                         <li class="tbl-title">
-                          <!-- <h2>{{Titlename}}</h2> -->
+                          <h2>AWB No:156666</h2>
                         </li>
                         <li class="tbl-search-box">
                           <!-- <label for="search-input"><i class="material-icons search-icon">search</i></label> -->
@@ -23,6 +23,9 @@
                             aria-label="Search box"> -->
                           <!-- <input placeholder="Search" type="text" #filter class="browser-default search-field"
                             aria-label="Search box"> -->
+                        </li>
+                        <li>
+                          <mat-checkbox class="example-margin">All Tracking</mat-checkbox>
                         </li>
                     
                       
