--- a/src/app/admin/users/permission/permission.component.html
+++ b/src/app/admin/users/permission/permission.component.html
@@ -8,7 +8,12 @@
       <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
           <div class="card">
-            <div class="body">
+          <div class="body">
+            <div *ngIf="this.errormessage=='Unauthorized'" class="text-center">
+              <mat-icon color="warn">report_problem</mat-icon><br>
+              You are not authorized
+            </div>
+            <div class="responsive_table" *ngIf="this.errormessage!='Unauthorized'">
               <div class="responsive_table">
                 <div class="materialTableHeader">
                   <div class="row pr-3">
@@ -107,6 +112,7 @@
           
             </div>
           </div>
+        </div>
         </div>
       </div>
     </div>
